option('tests', type: 'feature', description: 'Build tests', value: 'enabled')
option('spdmd', type: 'feature', description: 'Build spdmd daemon', value: 'enabled')
option('systemd', type: 'feature', description: 'Include systemd support', value: 'enabled')

option('fetch_serialnumber_from_responder', type: 'integer', min : 0, max : 254, value : 0, description: 'If not 0 will enable custom code to feth the serial number measurement and write it to the pldm inventory')

option('emu', type: 'feature', description: 'Build spdmcpp_emu for testing', value: 'enabled')	#TODO disable before release
