option('tests', type: 'feature', description: 'Build tests', value: 'enabled')
option('spdmd', type: 'feature', description: 'Build spdmd daemon', value: 'enabled')
option('systemd', type: 'feature', description: 'Include systemd support', value: 'enabled')

option('discovery_only_from_mctp_control', type: 'feature', description: 'Build with discovery being based only on MCTP Control daemon, the EID will be used for the responder dbus path name.', value: 'disabled')

option('fetch_serialnumber_from_responder', type: 'integer', min : 0, max : 254, value : 0, description: 'If not 0 will enable custom code to feth the serial number measurement and write it to the pldm inventory')

option('emu', type: 'feature', description: 'Build spdmcpp_emu for testing', value: 'enabled')	#TODO disable before release

option('conf_file_name', type: 'string', value : '"/etc/spdmd_conf.json"', description: 'Exact path to SPDM json configuration file')

option('use_default_dbus', type: 'feature', description: 'Use default DBus bus for tests on x86.', value: 'disabled')

option('use_fuzz', type: 'feature', description: 'Fuzz testing.', value: 'disabled')
